--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "server": "json-server --watch data/questions.json --port 8000"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
